# google-adk-enterprise-agents

./: .env.example  .gitignore  .secrets.baseline  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
Section_1_ADK Foundations & Your AI Engineer Journey/: 01_welcome_career_path.ipynb  01_welcome_setup_checklist.ipynb  02_developer_workspace_setup.ipynb  02_production_environment_setup.ipynb  03_adk_advantage_benchmarks.ipynb  04_adk_architecture_overview.ipynb  05_first_production_agent.ipynb  Lecture_1.4_Your_First_ADK_Agent.ipynb
Section_1_Welcome_and_Quick_Start/: Lecture_1.1_Welcome_to_Your_AI_Agent_Journey.ipynb  Lecture_1.2_The_Multi_Agent_Revolution.ipynb  Lecture_1.3_Environment_Setup_Made_Easy.ipynb
Section_2_Advanced Agent Architecture & Model Strategy/: 06_Advanced_Tool_Integration_Notebook.ipynb  06_build_three_agent_types.ipynb  06_google_agent_architecture.ipynb  07_agent_memory_conversation_management.ipynb  07_intelligent_model_selection.ipynb  08_enterprise_prompt_patterns.ipynb  08_error_handling_production_monitoring.ipynb  09_multi_agent_workflow.ipynb  09_smart_loan_processing_multi_agent_system.ipynb  10_professional_dev_workflows.ipynb  11_intelligent_customer_service.ipynb  12_working_prompt_patterns.ipynb  13_agent_selection_framework.ipynb  CapstoneProject.ipynb  Lecture_9_agent_types_production_use_cases.ipynb
Section_3_MCP Integration & Enterprise Research/: 12_mcp_integration.ipynb  13_enterprise_research_agent.ipynb
Section_4_ A2A Protocol & Multi-Agent Systems/: 14_a2a_protocol_mastery.ipynb
(+1 files in other folders)
